# Comparing-Measures-of-LLM-Truthfulness

./: Pipfile  create_simpleTQA.ipynb  get_llama2_chat_response_data.ipynb  llama2_chat_main_experiment.ipynb  llama2_utils.py  llm_api_utils.py  pyproject.toml  simpleFacts.py  simpleTQA.py  train_lie_detector_for_llama2_chat.ipynb  utility_3d_figures.ipynb  utility_monitoring_experiments.ipynb
LieDetection/data/processed_questions/: simple_facts.json  simple_tqa.json
LieDetection/experiments_alpaca_vicuna/: lying_and_detection_results.ipynb
LieDetection/lllm/: __init__.py  dialogue_classes.py  questions_loaders.py  utils.py
RepresentationEngineering/examples/honesty/: utils.py
data/: simple_facts.csv  simple_tqa.csv  simple_tqa.json
trained_classifiers/: simple_facts_binary_classifier.pkl  simple_facts_logprobs_classifier_mistral.pkl
